# graph-of-skills

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DATA.md  LICENSE  README.md  pyproject.toml
agent_skills/graph-skills-retriever/: SKILL.md
agent_skills/graph-skills-retriever/agents/: openai.yaml
agent_skills/graph-skills-retriever/references/: container-layout.md
agent_skills/vector-skills-retriever/: SKILL.md
evaluation/: README.md  alfworld_run.py  prompt_generator.py  skill.py  token_usage.py  utils.py
evaluation/alfworld/: alfworld_procedure_code_template.py
evaluation/alfworld/prompts/: system_prompt.py
evaluation/skills_ref/: parser.py
evaluation/skillsbench/: .gitignore  README.md  graphskills_benchmark.py
evaluation/skillsbench/_allskills_template/: AGENTS.md  GEMINI.md  docker-compose.yaml
evaluation/skillsbench/_gos_template/: AGENTS.md  CLAUDE.md  Dockerfile.gos-append  GEMINI.md  docker-compose.yaml
evaluation/skillsbench/_vectorskills_template/: AGENTS.md  CLAUDE.md  GEMINI.md  docker-compose.yaml
evaluation/skillsbench/experiments/: README.md
evaluation/skillsbench/graphskills_assets/: query.py  vector_query.py
evaluation/skillsbench/scripts/: add-agent-instructions.py  add-allskills-agent-instructions.py  analyze-tokens.py  build-skillset.py  generate-skillset-benchmark.sh  (+3 more)
gos/: __init__.py  experiments.py
gos/core/: engine.py  litellm_services.py  parsing.py  policies.py  prompts.py  retrieval.py  schema.py  services.py
gos/interfaces/: claude_code.py  cli.py  mcp.py
gos/utils/: config.py
scripts/: download_data.sh  harbor_run_with_env.sh
tests/: test_cli.py  test_config.py  test_engine_openrouter.py  test_engine_smoke.py  test_experiments.py  test_parsing.py  test_prompts.py  test_retrieval.py  test_skillsbench_graphskills.py
(+10 files in other folders)
